src/objects/SapInformation__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Year__c</fullName>
        <label>Billing Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>SapInformation</relationshipLabel>
        <relationshipName>SapInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Current SAP Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SapInformation</label>
    <nameField>
        <label>SapInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SapInformation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>